
	* lib/qwik/act-status.rb: Add test cases.

	* lib/qwik/act-history.rb: TimeMachine function is disabled.

	* lib/qwik/act-comment.rb: Guests cannot post comments.

	* lib/qwik/db-filesystem.rb: New method size.
	* lib/qwik/page-get.rb: Ditto.

	* lib/qwik/act-html.rb: Prepare big page test case.

	* lib/qwik/act-html.rb: Add big page error.

	* lib/qwik/act-archive.rb: Cache archive.

2009-09-02  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-metadata.rb: Do not cache SiteMetadata object.
	* lib/qwik/act-metadata.rb: Do not show page title.

	* lib/qwik/act-metadata.rb: Limit only 10 items per feed.

	* lib/qwik/act-metadata.rb: Disable RSS 0.91 and RSS 1.0.
	* lib/qwik/act-metadata.rb: Delete comments.

	* lib/qwik/site-search.rb: Search function is disabled for now.
	* lib/qwik/site.rb: Ditto.
	* lib/qwik/act-search.rb: Ditto.

	* lib/qwik/act-rrefs.rb: Reverse ref function is disabled for now.
	* lib/qwik/act-new.rb: Ditto.
	* lib/qwik/act-save.rb: Ditto.

2009-09-01  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-status.rb: Show status action.

	* lib/qwik/db-backup.rb: Disable content of each function.
	* lib/qwik/act-backup.rb: Ditto.
	* lib/qwik/act-history.rb: Ditto.
	* lib/qwik/pages.rb: Ditto.

2009-08-28  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/periodic.rb: Do not cache farm on memory.

2009-08-27  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/qwikweb-adduser.rb: Fix spell miss.
	* lib/qwik/qwik-service.rb: Ditto.

	* lib/qwik/server-memory.rb: Do not cache farm object.

	* lib/qwik/farm.rb: Fix test cases.
	* lib/qwik/act-rrefs.rb: Fix a test case.

2009-08-21  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/db-searchwords.rb: Debug.

2009-08-20  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/farm.rb: Do not cache @sites.

	* super/_PageAttribute.txt: rrefs plugin is disabled.

	* lib/qwik/act-search.rb: Debug for em nil case.

2009-08-19  Kouichirou Eto  <2009@eto.com.nospam.com>
